--- a/index.html
+++ b/index.html
@@ -1,15 +1,366 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>陳小廷個人網站</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chocolate+Classical+Sans&family=LXGW+WenKai+Mono+TC:wght@400;700&display=swap"
+        rel="stylesheet">
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
+        integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+        integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/all.css">
 </head>
+
 <body>
-    <img src="./images/web.jpg" width="100%" class="d-none d-md-block">
-    <img src="./images/web-m.jpg" width="100%" class="d-md-none">
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js" integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <nav class="navbar">
+        <a href="/" class="navbar-brand p-3">
+            <img src="./images/logo.svg" alt="Ting" style="height: 4rem;">
+        </a>
+    </nav>
+    <section class="page01">
+        <div class="container-fluid">
+            <div class="row flex-row-reverse">
+                <div class="col-lg-5 rightBox">
+                    <img src="./images/page01-img.svg" class="col-12 d-none d-lg-block">
+                    <img src="./images/page01-img-m.svg" class="col-12 d-lg-none">
+                </div>
+                <div class="col-lg-7 leftBox">
+                    <div class="Txt">
+                        <h1 class="titleBox"><span>I‘am</span> <b class="font-lxgw">陳小廷.</b></h1>
+                        <h2 class="h4 mt-lg-5 pb-3 font-lxgw">
+                            具有近7年經驗的資深網頁設計師<br>
+                            技術雙修並行，熱衷於優化使用者的網頁體驗
+                        </h2>
+                        <p>
+                            ▪︎完成了30多個官方網站和上百個一頁式建案銷售網站的項目<br>
+                            ▪︎畫面設計並切版高質量的網頁，設計與切版完美呈現<br>
+                            ▪︎規劃並開發了網站管理和建案預約系統，提升了工作效率<br>
+                            ▪︎與後端工程師緊密合作經驗，進行有效的溝通和討論<br>
+                        </p>
+                        <small>WEB DEVELOPMENT / BRANDING / UI / UX / DESIGN</small>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+    <section class=" page02">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="Txt mb-3">
+                        <h2
+                            class="unitTitle d-flex align-items-center  justify-content-lg-start   justify-content-center  text-lg-sraet text-center">
+                            <span>Skill</span>
+                            <b class="font-lxgw">專業<br>技能</b>
+                        </h2>
+                    </div>
+                    <ul class="row list-unstyled g-3">
+                        <li class="col-lg-3 col-6">
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <h3 class="card-title font-lxgw">擅長網站<br>畫面設計</h3>
+                                    <h6 class="card-subtitle mb-2 text-muted">Website Visual Design</h6>
+                                    <p class="card-text">
+                                        專注於創造吸引人的網站設計，確保每一個細節都能打動您的用戶。
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-lg-3 col-6">
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <h3 class="card-title font-lxgw">經驗豐富<br>高效切版</h3>
+                                    <h6 class="card-subtitle mb-2 text-muted">Webpage Layout</h6>
+                                    <p class="card-text">
+                                        具備豐富的切版經驗，能夠高效完成網站的切版。
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-lg-3 col-6">
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <h3 class="card-title font-lxgw">高效協作<br>後端溝通</h3>
+                                    <h6 class="card-subtitle mb-2 text-muted">Effective Collaboration</h6>
+                                    <p class="card-text">
+                                        能夠與後端工程師進行有效的溝通和討論，確保項目各環節的順利進行。
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-lg-3 col-6">
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <h3 class="card-title font-lxgw">熟悉網站
+                                        <br>部署流程
+                                    </h3>
+                                    <h6 class="card-subtitle mb-2 text-muted">Deployment Expertise</h6>
+                                    <p class="card-text">
+                                        熟悉網站的部署流程，能夠獨立完成網站的網址主機配置和上線操作。
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class=" page03 ">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <h2 class="unitTitle">
+                        <span>Software</span>
+                        <b class="font-lxgw d-block">擅長工具</b>
+                    </h2>
+                </div>
+                <div class="col-lg-6">
+                    <p class="text-justify">
+                        自學設計，熟練配置網站顏色、字體和圖標，培養了良好的視覺美感和用戶體驗設計能力。熟練掌握HTML和CSS，能夠獨立完成網頁切版和前端開發工作。精通Bootstrap
+                        5框架，高效實現響應式設計（RWD），確保網站在不同設備上的良好顯示效果。目前在六角學院進修JavaScript，專注於前端開發。
+                    </p>
+                </div>
+            </div>
+            <ul class="progress-list list-unstyled mt-lg-5 mt-3">
+                <li class="progress-item">
+                    <h6 class="progress-title">Adobe Illustrator</h6>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90"
+                            aria-valuemin="0" aria-valuemax="100">90%</div>
+                    </div>
+                </li>
+                <li class="progress-item">
+                    <h6 class="progress-title">JavaScript</h6>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80"
+                            aria-valuemin="0" aria-valuemax="100">80%</div>
+                    </div>
+                </li>
+                <li class="progress-item">
+                    <h6 class="progress-title">HTML</h6>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90"
+                            aria-valuemin="0" aria-valuemax="100">90%</div>
+                    </div>
+                </li>
+                <li class="progress-item">
+                    <h6 class="progress-title">CSS</h6>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90"
+                            aria-valuemin="0" aria-valuemax="100">90%</div>
+                    </div>
+                </li>
+                <li class="progress-item">
+                    <h6 class="progress-title">Sass/SCSS</h6>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50"
+                            aria-valuemin="0" aria-valuemax="100">50%</div>
+                    </div>
+                </li>
+                <li class="progress-item">
+                    <h6 class="progress-title">JavaScript</h6>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="10"
+                            aria-valuemin="0" aria-valuemax="100">10%</div>
+                    </div>
+                </li>
+                <li class="progress-item">
+                    <h6 class="progress-title">bootstrap 5</h6>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80"
+                            aria-valuemin="0" aria-valuemax="100">80%</div>
+                    </div>
+                </li>
+                <li class="progress-item">
+                    <h6 class="progress-title">DaVinci Resolve</h6>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50"
+                            aria-valuemin="0" aria-valuemax="100">50%</div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="page04">
+        <ul class="case-list list-unstyled ">
+            <li class="case-item">
+                <div class="Img">
+                    <div class="innerImg">
+                        <div class="image" style="background-image: url(./images/case/case-img-1.jpg);"></div>
+                    </div>
+                </div>
+                <div class="Txt">
+                    <h4>一頁式網頁(建案銷售)</h4>
+                    <ul class="tag-group list-unstyled">
+                        <li>平面設計</li>
+                        <li>網頁切版</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="case-item">
+                <div class="Img">
+                    <div class="innerImg">
+                        <div class="image" style="background-image: url(./images/case/case-img-2.jpg);"></div>
+                    </div>
+                </div>
+                <div class="Txt">
+                    <h4>一頁式網頁(建案銷售)</h4>
+                    <ul class="tag-group list-unstyled">
+                        <li>平面設計</li>
+                        <li>網頁切版</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="case-item">
+                <div class="Img">
+                    <div class="innerImg">
+                        <div class="image" style="background-image: url(./images/case/case-img-3.jpg);"></div>
+                    </div>
+                </div>
+                <div class="Txt">
+                    <h4>一頁式網頁(建案銷售)</h4>
+                    <ul class="tag-group list-unstyled">
+                        <li>平面設計</li>
+                        <li>網頁切版</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="case-item">
+                <div class="Img">
+                    <div class="innerImg">
+                        <div class="image" style="background-image: url(./images/case/case-img-4.jpg);"></div>
+                    </div>
+                </div>
+                <div class="Txt">
+                    <h4>一頁式網頁(建案銷售)</h4>
+                    <ul class="tag-group list-unstyled">
+                        <li>平面設計</li>
+                        <li>網頁切版</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="case-item">
+                <div class="Img">
+                    <div class="innerImg">
+                        <div class="image" style="background-image: url(./images/case/case-img-5.jpg);"></div>
+                    </div>
+                </div>
+                <div class="Txt">
+                    <h4>一頁式網頁(建案銷售)</h4>
+                    <ul class="tag-group list-unstyled">
+                        <li>平面設計</li>
+                        <li>網頁切版</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="case-item">
+                <div class="Img">
+                    <div class="innerImg">
+                        <div class="image" style="background-image: url(./images/case/case-img-6.jpg);"></div>
+                    </div>
+                </div>
+                <div class="Txt">
+                    <h4>一頁式網頁(建案銷售)</h4>
+                    <ul class="tag-group list-unstyled">
+                        <li>平面設計</li>
+                        <li>網頁切版</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="case-item">
+                <div class="Img">
+                    <div class="innerImg">
+                        <div class="image" style="background-image: url(./images/case/case-img-7.jpg);"></div>
+                    </div>
+                </div>
+                <div class="Txt">
+                    <h4>形象官網</h4>
+                    <ul class="tag-group list-unstyled">
+                        <li>平面設計</li>
+                        <li>網頁切版</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="case-item">
+                <div class="Img">
+                    <div class="innerImg">
+                        <div class="image" style="background-image: url(./images/case/case-img-8.jpg);"></div>
+                    </div>
+                </div>
+                <div class="Txt">
+                    <h4>形象官網</h4>
+                    <ul class="tag-group list-unstyled">
+                        <li>平面設計</li>
+                        <li>網頁切版</li>
+                    </ul>
+                </div>
+            </li>
+            <li class="case-item">
+                <div class="Img">
+                    <div class="innerImg">
+                        <div class="image" style="background-image: url(./images/case/case-img-9.jpg);"></div>
+                    </div>
+                </div>
+                <div class="Txt">
+                    <h4>形象官網</h4>
+                    <ul class="tag-group list-unstyled">
+                        <li>平面設計</li>
+                        <li>網頁切版</li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </section>
+    <section class="contactPage">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2 class="unitTitle">
+                        <span>Contact</span>
+                        <b class="font-lxgw d-block"></b>
+                    </h2>
+                </div>
+                <div class="col-lg-6">
+                    <p>
+                        如果您正在尋找一名專業且可靠的網頁設計師<br>
+                        請隨時與我聯繫，我期待與您合作
+                    </p>
+                    <h6 class="mb-3">E-mail：chentt1124@gmail.com</h6>
+                    <a href="mailto:chentt1124@gmail.com" class="btn btn-dark px-5">E-MAIL</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="bg-dark text-center py-3">
+        <small class=" text-white">Copyright © 陳小廷Inc. All rights reserved</small>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"
+        integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
+        integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        $(".Txt").attr("data-aos", "fade-up").attr("data-aos-delay", "100");
+        $("li").attr("data-aos", "fade-up").attr("data-aos-delay", "100");
+        $("section").attr("data-aos", "fade-zoom-in").attr("data-aos-delay", "100");
+        AOS.init({
+            duration: 1500,
+        });
+    </script>
 </body>
+
 </html>
