--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
             </div>
             <ul class="progress-list list-unstyled mt-lg-5 mt-3">
                 <li class="progress-item">
+                    <h6 class="progress-title">Adobe Illustrator</h6>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90"
+                            aria-valuemin="0" aria-valuemax="100">90%</div>
+                    </div>
+                </li>
+                <li class="progress-item">
                     <h6 class="progress-title">Adobe PhotoShop</h6>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80"
