--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <div>
                             <a href="https://www.instagram.com/rightbrain.notes" target="_blank"
                                 class=" btn btn-dark mt-3 rounded-3">
-                                <img src="/images/icon-Instagram.svg" height="21" alt="Instagram">
+                                <img src="./images/icon-Instagram.svg" height="21" alt="Instagram">
                                 陳小廷的右腦筆記
                             </a>
                         </div>
@@ -841,7 +841,7 @@
                     </p>
                     <h6 class="mb-3">E-mail：chentt1124@gmail.com</h6>
                     <a href="https://www.instagram.com/rightbrain.notes" target="_blank" class="rounded-3 btn btn-dark">
-                        <img src="/images/icon-Instagram.svg" height="21" alt="Instagram">
+                        <img src="./images/icon-Instagram.svg" height="21" alt="Instagram">
                         陳小廷的右腦筆記
                     </a>
                 </div>
