--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/images/favicon.png" type="image/png">
     <link rel="apple-touch-icon" href="/images/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>畫出畫面，也寫出畫面｜陳小廷作品集</title>
+    <title>能設計畫面，也能寫出畫面｜陳小廷作品集</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -42,10 +42,14 @@
                         <h1 class="titleBox"><span>I‘am</span> <b class="font-lxgw">陳小廷.</b></h1>
 
 
-                        <h2 class="h4 mt-lg-5 pb-3 font-lxgw">
-                            同時精通視覺設計與前端切版，<br>
-                            擅長整合 UI/UX 與開發實作，提升整體使用體驗
-                        </h2>
+
+                        <div class="mt-lg-5 pb-3 ">
+                            <h2 class="h4 font-lxgw mb-1">
+                                擅長視覺設計與前端切版<br>
+                                提升整體使用體驗
+                            </h2>
+                            <small>WEB DESIGN / GRAPHIC DESIGN / UI DESIGN </small>
+                        </div>
                         <ul>
                             <li>具備品牌視覺與平面設計經驗，能整合風格、排版與數位設計</li>
                             <li>完成 30 多個官方網站與上百個建案一頁式網站的網頁製作</li>
@@ -53,7 +57,6 @@
                             <li>持續精進 JavaScript 技能，獨立開發互動功能與資料處理邏輯</li>
                             <li>規劃並開發網站管理系統與建案預約系統，提升專案管理效率</li>
                         </ul>
-                        <small>GRAPHIC DESIGN / UI DESIGN / WEB DESIGN / HTML & CSS / BOOTSTRAP</small>
 
                         <div>
                             <a href="https://www.instagram.com/rightbrain.notes" target="_blank"
