--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
                         <div class="mt-lg-5 pb-3 ">
                             <h2 class="h4 font-lxgw mb-1">
-                                擅長視覺設計與前端切版<br>
-                                提升整體使用體驗
+                                擅長視覺設計與網頁切版<br>
+                                將設計概念完美實現於畫面之中
                             </h2>
                             <small>WEB DESIGN / GRAPHIC DESIGN / UI DESIGN </small>
                         </div>
