作品名稱調整

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/images/favicon.png" type="image/png">
+    <link rel="icon" href="./images/favicon.png" type="image/png">
     <link rel="apple-touch-icon" href="/images/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>能設計畫面，也能寫出畫面｜陳小廷作品集</title>
@@ -389,7 +389,7 @@
             <div class="row row-cols-lg-2 row-cols-1">
                 <div class="col border-bottom  border-dark">
                     <div class="card-item px-2 py-5">
-                        <a href="https://smallting1124.github.io/2025_react_project/#/" target="_blank"
+                        <a href="https://smallting1124.github.io/2025_react_project/" target="_blank"
                             class="text-decoration-none link-body-emphasis">
                             <div class="Img">
                                 <div class="innerImg">
@@ -398,7 +398,7 @@
                                 </div>
                             </div>
                             <div class="Txt pt-3">
-                                <h4>六角專題專題：React「親子好趣處」
+                                <h4>親子景點檢索平台：六角專題
                                     <i class="bi bi-arrow-up-right-circle-fill"></i>
                                 </h4>
                                 <ul class="tag-group list-unstyled flex-wrap">
@@ -422,7 +422,7 @@
                                 </div>
                             </div>
                             <div class="Txt pt-3">
-                                <h4>六角專題「享讀」揪團讀書會
+                                <h4>讀書會預約平台-六角專題
                                     <i class="bi bi-arrow-up-right-circle-fill"></i>
                                 </h4>
                                 <ul class="tag-group list-unstyled flex-wrap">
