--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="./images/favicon.png" type="image/png">
-    <link rel="apple-touch-icon" href="/images/favicon.png">
+    <link rel="apple-touch-icon" href="/images/favicon.png"> <!-- 網站標題圖預設（for iOS 裝置） -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>能設計畫面，也能寫出畫面｜陳小廷作品集</title>
+    <title>陳小廷｜個人履歷與作品集</title>
+    <meta name="description"
+        content="這是一份由陳小廷設計與開發的個人履歷與作品集網站，結合視覺設計與前端技術，完整呈現職涯背景與技能（Design It. Code It. 能設計畫面，也能寫出畫面）" />
+    <meta name="author" content="陳小廷">
+
+
+    <!-- 社群分享（Open Graph for Facebook & LinkedIn） -->
+    <meta property="og:title" content="陳亭廷｜個人履歷與作品集" />
+    <meta property="og:description" content="視覺設計與網頁切版並行，陳亭廷的個人履歷網站。" />
+    <meta property="og:image" content="./images/og-image.jpg" />
+    <meta property="og:url" content="https://smallting1124.github.io/tingWeb/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="陳亭廷｜個人履歷與作品集" />
+    <meta name="twitter:description" content="結合視覺設計與前端技術，完整呈現職涯背景與技能。" />
+    <meta name="twitter:image" content="./images/og-image.jpg" />
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
